--- a/source/posts/2018-06-29-etat-data.html.markdown
+++ b/source/posts/2018-06-29-etat-data.html.markdown
@@ -1,3 +1,11 @@
 ---
-title: Quel est l'état de la data de l'État?
+title: L'état de la data de l'État
 ---
+
+[Très intéressant article](http://www.henriverdier.com/2018/06/pour-une-administration-liberee.html) d'Henri Verdier sur le chemin parcouru par le gouvernement français en termes de données. 
+
+READMORE
+
+## [data.gouv.fr](https://www.data.gouv.fr/fr/) 
+
+Le portail des données publiques. Pas nouveau, et de plus en plus nourri.
